--- a/frontend/menu.html
+++ b/frontend/menu.html
@@ -50,6 +50,7 @@
     <h3 class="text-lg font-semibold text-gray-700 mb-2">Data Organisation</h3>
     <ul class="space-y-1">
         <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="tags.html"><i class="fa-solid fa-tags text-indigo-600 mr-1"></i> Manage Tags</a></li>
+        <li><a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="ai_tags.html"><i class="fa-solid fa-robot text-indigo-600 mr-1"></i> AI Tags</a></li>
         <li>
           <a class="flex items-center text-gray-700 hover:text-gray-900 hover:bg-indigo-50 px-2 py-1 rounded" href="missing_tags.html">
             <span class="flex items-center"><i class="fa-solid fa-circle-question text-indigo-600 mr-1"></i> Missing Tags</span>
