--- a/frontend/graphs.html
+++ b/frontend/graphs.html
@@ -253,10 +253,12 @@
                     },
                     filter: { property: 'innerArcLength', operator: '>', value: 16 }
                 },
+                // Display a clear hierarchy with segments in the centre
+                // followed by categories and tags on the outer rings
                 levels: [
-                    { level: 1, levelIsConstant: false, dataLabels: { rotationMode: 'parallel' } },
-                    { level: 2, colorByPoint: true },
-                    { level: 3, colorVariation: { key: 'brightness', to: -0.5 } }
+                    { level: 1, colorByPoint: true, dataLabels: { rotationMode: 'parallel' } },
+                    { level: 2, colorVariation: { key: 'brightness', to: -0.5 } },
+                    { level: 3, colorVariation: { key: 'brightness', to: -0.8 } }
                 ]
             }],
             title: { text: 'Segments, Categories and Tags' },
